--- a/style.css
+++ b/style.css
@@ -11,13 +11,15 @@ body{
     display: flex;
     flex-direction: column;
     width: 450px;
-    height: 650px;
+    height: 400px;
     border: 1px solid black;
     border-radius: 50px;
-    background-color: white;
+    background-color: black;
 }
 
 .display{
+    display: flex;
+    justify-content: center;
     width: 450px;
     height: 75px;     
 }
@@ -28,16 +30,18 @@ body{
     align-items: center;
     width: 450px;
     height:125px;
-    background-color: white;
+    background-color: lightblue;
     border-radius: 50px;
 }
 
 div.button-container{
     flex-direction: row;
+    align-items: center;
     gap: 10px;
     flex-wrap: wrap;
     width: 450px;
     height: 450px;
+    padding-left: 125px;
 }
 
 button{
@@ -54,8 +58,17 @@ button#enter{
     width: fit-content;
 }
 
+button#clear{
+    width: fit-content;
+}
+
+button#del{
+    width: fit-content;
+}
+
 h5{
     padding-left: 15px;
+    color: white;
 }
 /*
 .display{
