number buttons work

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     height: 400px;
     border: 1px solid black;
     border-radius: 50px;
-    background-color: black;
+    background-color: #ba0000;
 }
 
 .display{
