--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
 
 .screen{
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     justify-content: center;
     flex-wrap: wrap;
     align-items: center;
